--- a/web/package.json
+++ b/web/package.json
@@ -44,5 +44,6 @@
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@8.15.5+sha1.a58c038faac410c947dbdb93eb30994037d0fce2"
 }
